fix #42739: Teams' note bubble is hard to see with dark theme toggled on

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -721,7 +721,7 @@ team-schedule-datepicker {
 				font-size: 14px !important;
 			}
 			.noComment {
-				color: $gray026;
+				color: $gray-500;
 			}
 		}
 		th.shift-category-cell-header, td.shift-category-cell {
